fix: reduce min contrast ratio

--- a/src/styles/bootstrap.scss
+++ b/src/styles/bootstrap.scss
@@ -20,6 +20,8 @@ $pink:    #d63384 !default;
 $teal:    #20c997 !default;
 $cyan:    #0dcaf0 !default;
 
+$min-contrast-ratio: 3;
+
 $font-family-sans-serif: 'Helvetica Neue', Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 
 // Component Color Overrides
